--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,11 @@ environment:
 
 
 dependencies:
+  google_maps_flutter: ^2.5.0
+  geolocator: ^12.0.0
   flutter:
     sdk: flutter
+    
 
 
   cupertino_icons: ^1.0.8
