--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@ environment:
 
 
 dependencies:
-  google_maps_flutter: ^2.6.1
-  geolocator: ^12.0.0
   flutter:
     sdk: flutter
-
+  google_maps_flutter: ^2.6.1
+  google_places_flutter: ^2.1.1
+  geolocator: ^12.0.0
+  flutter_dotenv: ^5.1.0
 
 
 
@@ -34,3 +35,4 @@ flutter:
 
   assets:
     - assets/images/
+    - .env
