--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.6.1
   google_places_flutter: ^2.1.1
-  geolocator: ^12.0.0
+  http: ^1.1.0
   flutter_dotenv: ^5.1.0
 
 
